RESOLVED FIXED 215333
Shaping can be performed on glyphIDs from the wrong font
https://bugs.webkit.org/show_bug.cgi?id=215333
Summary Shaping can be performed on glyphIDs from the wrong font
Myles C. Maxfield
Reported 2020-08-10 13:01:19 PDT
Shaping can be performed on glyphIDs from the wrong font
Attachments
Patch (14.23 KB, patch)
2020-08-10 13:11 PDT, Myles C. Maxfield
darin: review+
Myles C. Maxfield
Comment 1 2020-08-10 13:11:21 PDT
Darin Adler
Comment 2 2020-08-10 13:18:30 PDT
Comment on attachment 406322 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406322&action=review > Source/WebCore/platform/graphics/WidthIterator.cpp:181 > + const GlyphData& uppercaseGlyphData = m_font.glyphDataForCharacter(u_toupper(character), m_run.rtl()); I suggest we use "auto&" here and/or have the local variable be the font instead of the glyph data: auto glyphFont = m_font.glyphDataForCharacter(u_toupper(character), m_run.rtl()).font;
Myles C. Maxfield
Comment 3 2020-08-10 14:52:07 PDT
Radar WebKit Bug Importer
Comment 4 2020-08-10 14:53:37 PDT
Note You need to log in before you can comment on or make changes to this bug.